--- a/src/app/pages/planification/new-simulation-economique/new-simulation-economique.component.scss
+++ b/src/app/pages/planification/new-simulation-economique/new-simulation-economique.component.scss
@@ -443,14 +443,26 @@ $vertClair:#32ff34;
 .bilan-final {
   display: none !important;
 }
-
+.body-wrapper{
+  margin: Opx!important;
+}
+.pageWrapper {
+  padding: 0px!important;
+  min-height: calc(100vh - 70px);
+  margin: 0px!important;
+}
 // // ---------- CONTAINER PRINCIPAL ----------
 .bigContaint {
   background: #ffffff;
   border-radius: 8px;
-  padding: 2rem;
+  // padding: 2rem;
   box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-  margin-top: 1rem;
+  // margin-top: 1rem;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100%;
+  // height: 100vh; /* prend toute la hauteur visible */
+  box-sizing: border-box;
 
   .title {
     font-size: 1.5rem;
