--- a/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.html
+++ b/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.html
@@ -9,21 +9,7 @@
 
     <form class="p-fluid">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-4 items-end">
-        <!-- RECETTES -->
-        <!-- <div class="col-span-2">
-          <label class="uppercase font-semibold text-gray-700 mb-1 block">LISTE DES RECETTES</label>
-          <p-dropdown 
-            [options]="recettes" 
-            [(ngModel)]="recetteSelectione" 
-            name="plat" 
-            optionLabel="name" 
-            [filter]="true" 
-            filterBy="name" 
-            placeholder="SÉLECTIONNEZ UNE RECETTE"
-            class="w-full">
-          </p-dropdown>
-        </div> -->
-
+        
         <!-- QTE NET À PRÉPARER -->
         <div>
           <label class="uppercase font-semibold text-gray-700 mb-1 block">QUANTITE NET À PRÉPARER </label>
@@ -59,16 +45,25 @@
     <h3 class="text-xl font-bold text-gray-800 flex items-center gap-2">
       <i class="pi pi-cog text-orange-500"></i> DÉTAILS DES INGRÉDIENTS POUR LA RECETTE
     </h3>
-
+    
     <p class="text-gray-600">
       POUR LA PRÉPARATION DE {{ recetteSelectione.net | number: '1.0-3' }} KG DE POIDS NET, ÉQUIVALENT À {{ recetteSelectione.brut | number: '1.0-3' }} KG DE POIDS BRUT.
     </p>
     <p class="text-gray-600">
       COÛT ESTIMÉ : <strong class="text-green-700">{{ recetteSelectione.cout | number: '1.0-3':'fr-FR' }} {{ usercurrency }}</strong>
     </p>
-
+     
     <!-- Tableau des ingrédients -->
     <div class="overflow-x-auto mt-4">
+       <!-- Bouton au-dessus et à gauche -->
+        <div class="flex justify-start mb-3">
+          <p-button 
+            label="GÉNÉRER FEUILLE DE COURSE" 
+            icon="pi pi-eye">
+          </p-button>
+          
+        </div>
+      
       <table class="min-w-full table-auto border-collapse rounded-lg overflow-hidden">
         <thead class="bg-green-100 text-gray-700 uppercase text-sm">
           <tr>
@@ -76,6 +71,8 @@
             <th class="px-4 py-2 text-left">POIDS NET (KG)</th>
             <th class="px-4 py-2 text-left">POIDS BRUT (KG)</th>
             <th class="px-4 py-2 text-left">COUT</th>
+            <th class="px-4 py-2 text-left">STOCK AVANT</th>
+            <th class="px-4 py-2 text-left">STOCK APRES</th>
           </tr>
         </thead>
         <tbody>
@@ -84,12 +81,15 @@
             <td class="px-4 py-2">{{ detail?.net | number: '1.0-3' }} {{ detail?.ingredient?.unit?.code }}</td>
             <td class="px-4 py-2">{{ detail?.brut | number: '1.0-3' }} {{ detail?.ingredient?.unit?.code }}</td>
             <td class="px-4 py-2">{{ detail?.cout | number: '1.0-3':'fr-FR' }} {{ usercurrency }}</td>
+            <td class="px-4 py-2">{{ detail?.ingredient?.stockList?.quantity | number: '1.0-3' }} {{ detail?.ingredient?.unit?.code }}</td>
+            <td class="px-4 py-2">{{ detail?.ingredient?.stockList?.quantity | number: '1.0-3'}}-{{detail?.brut | number: '1.0-3'}} {{ detail?.ingredient?.unit?.code }}</td>
           </tr>
           <tr *ngIf="!detailsDishes || detailsDishes.length == 0">
             <td colspan="4" class="text-center py-4 text-gray-500">AUCUN INGRÉDIENT DISPONIBLE</td>
           </tr>
         </tbody>
       </table>
+      
     </div>
   </div>
 
